--- a/index.css
+++ b/index.css
@@ -1,10 +1,23 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Montserrat', sans-serif;
+    color: #282828;
 }
 
-/*
-Challenge:
-1. Get this layout looking like the 
-   screenshots on the slide.
-*/  
+/* Typography */  
+
+h1 {
+    font-size: 40px;
+    font-weight: 700;
+    margin: 25px 30px;
+}
+
+.logo {
+    color: whitesmoke;
+}
+
+nav {
+    background-color: #282828;
+    margin: 0;
+}
