--- a/index.css
+++ b/index.css
@@ -1,23 +1,50 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     color: #282828;
 }
 
 /* Typography */  
-
-h1 {
-    font-size: 40px;
-    font-weight: 700;
-    margin: 25px 30px;
+header {
+    color: whitesmoke;
+    background-color: #282828;
 }
 
 .logo {
-    color: whitesmoke;
+    font-size: 18px;
+    font-weight: 700;
+    margin: 30px 25px;
 }
 
-nav {
-    background-color: #282828;
+ul {
     margin: 0;
+    padding: 25px;
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    gap: 10px;
+}
+
+li {
+    cursor: pointer;
+}
+
+.icon {
+    width: 25px;
+}
+
+
+h1 {
+    font-size: 40px;
+    font-weight: 400;
+    margin: 30px 25px;
+}
+
+.item-img {
+    width: 100%;
+}
+
+.caption {
+    margin: 0px 25px;
 }
