--- a/index.css
+++ b/index.css
@@ -45,8 +45,23 @@ h1 {
 
 .item-img {
     width: 100%;
+    display: block;
 }
 
 .caption {
-    margin: 0px 25px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin: 0 25px;
+}
+
+button {
+    border: none;
+    background-color: #cd6858;
+    color: whitesmoke;
+    padding: 10px 15px;
+    font-weight: 700;
+    cursor: pointer;
+    align-self: center;
+
 }
