--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     gap: 20px;
-    margin: 0 25px;
+    margin: 10px 25px;
 }
 
 button {
